@@ -6,6 +6,7 @@ Best: 32
 Streak: 1
     - Following Tutorial: Add additional database operations
     - Following Tutorial: Add TaskViewModel
+    - Following Tutorial-ish: Fix first-launch bugs
 
 01-04-2025
 Streak: 2
